--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
     "start": "ts-node src/index.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "clear_jest": "jest --clearCache",
     "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
@@ -17,9 +18,11 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "multer": "^1.4.2",
-    "pg": "^8.0.0",
+    "pg": "^8.0.2",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.24"
+    "typeorm": "^0.2.24",
+    "uuid": "^7.0.3",
+    "uuidv4": "^6.0.7"
   },
   "devDependencies": {
     "@types/express": "4.17.3",
